# spa-distributed-application-tools

./: .cruft.json  .readthedocs.yaml  Dockerfile-base  Dockerfile-test  LICENSE  README.MD  chat_2023_08_17_12_46_24.md  mkdocs.yml  pyproject.toml  test.sh
docs/: index.md  reference.md
docs/examples/: _preface.md  consumer.md  producer.md  request_respones.md  request_response.md  state.md
examples/: 01_simple_consumer.py  01_simple_producer.py  02_simple_producer.py
examples/kafka/: 01_consumer.py  01_fast_consumer.py  01_simple_consumer.py  02_fast_producer.py  02_producer.py  02_simple_producer.py  03_fast_request.py  03_request.py  03_request_example.py  04_state.py  docker-compose.yml
examples/mqtt/: 01_consumer.py  01_fast_consumer.py  01_simple_consumer.py  02_fast_producer.py  02_producer.py  02_simple_producer.py  03_fast_request.py  03_request.py  03_request_example.py  04_state.py  docker-compose.yml  mosquitto.conf
spa_dat/: __init__.py  application.py  config.py  main.py  provider.py  serialization.py
spa_dat/application/: application.py  typedef.py
spa_dat/protocol/: kafka.py  mqtt.py  spa.py  typedef.py
spa_dat/serialization/: json.py  typedef.py
spa_dat/service/: messages.py  mqtt.py
spa_dat/socket/: kafka.py  mqtt.py  typedef.py
spa_distributed_application_tools/: __init__.py
spa_distributed_application_tools/protocol/spa/: spa.py
